Closed Bug 1251405 Opened 8 years ago Closed 8 years ago

fix some units issues in FrameAnimator

Categories

(Core :: Graphics: ImageLib, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

Details

Attachments

(2 files)

      No description provided.
This came out of the investigation in bug 926048.
Comment on attachment 8723779 [details] [diff] [review]
Part 2. Use 64 bit ints for the delay because it could be that big in practice.

Review of attachment 8723779 [details] [diff] [review]:
-----------------------------------------------------------------

Heh. Shall we get QA to verify this one? ;)
Attachment #8723779 - Flags: review?(edwin) → review+
https://hg.mozilla.org/mozilla-central/rev/5be4e5b20d33
https://hg.mozilla.org/mozilla-central/rev/52ad95a28384
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.